# polybot-recorder

./: .env.example  .gitattributes  .gitignore  README.md  config.yaml  pyproject.toml
baskets/: colombia-runoff-2026.txt
deploy/: README.md  polybot-recorder.service
forecasts/: 2026-runoff.md
scripts/: analyze.py
src/polybot/: __init__.py  __main__.py  basket.py  cli.py  config.py  discovery.py  log.py  models.py  recorder.py  storage.py
src/polybot/backtest/: __init__.py  engine.py  fills.py  history.py  loader.py  portfolio.py  report.py  strategy.py  types.py
src/polybot/clients/: __init__.py  clob.py  gamma.py  ws.py
src/polybot/dashboard/: __init__.py  app.py  data.py  render.py
tests/: test_backtest.py  test_basket.py  test_dashboard.py  test_discovery.py  test_models.py  test_report.py
