[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polybot"
version = "0.1.0"
description = "Read-only research & data-capture layer for Polymarket niche-market trading"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nicolas Salazar" }]
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]
analysis = ["pandas>=2.2", "matplotlib>=3.8", "pyarrow>=16.0"]

[project.scripts]
polybot = "polybot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
